--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,10 +1,20 @@
 "zh-CN":
+  bulk_update: 批次编辑
+  bulk_delete: 批次删除
+  
   activerecord:
     attributes:
       event:
         name: "活动名称"
-        description: "描述"  
+        description: "描述"
+
   event_list: 活动列表
+
   admin:
     event_list: 活动列表管理
-  hello: "亲～ %{name} 你好："
+    hello: "亲～ %{name} 你好："
+
+  registration:
+    status:
+    pending: 报名尚未完成
+    confirmed: 报名成功
